--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
         "@angular/router": "~15.2.4",
         "@fortawesome/fontawesome-free": "^6.6.0",
         "bootstrap": "^5.3.3",
+        "dotenv": "^16.4.5",
+        "express": "^4.19.2",
+        "mongodb": "^6.8.0",
+        "mongoose": "^8.5.3",
         "rxjs": "~7.8.0",
         "zone.js": "~0.13.0"
     },
