--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
         "@angular/router": "~15.2.4",
         "@fortawesome/fontawesome-free": "^6.6.0",
         "bootstrap": "^5.3.3",
+        "chart.js": "^4.4.4",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
         "mongodb": "^6.8.0",
         "mongoose": "^8.5.3",
+        "ngx-swiper-wrapper": "^10.0.0",
         "rxjs": "~7.8.0",
+        "swiper": "^11.1.10",
         "zone.js": "~0.13.0"
     },
     "devDependencies": {
