--- a/package.json
+++ b/package.json
@@ -1,40 +1,40 @@
 {
-    "name": "trading-app",
-    "version": "0.0.1",
-    "scripts": {
-        "ng": "ng",
-        "start": "ng serve",
-        "build": "ng build",
-        "test": "ng test",
-        "lint": "ng lint",
-        "e2e": "ng e2e"
-    },
-    "dependencies": {
-        "@angular/animations": "~15.2.4",
-        "@angular/common": "~15.2.4",
-        "@angular/compiler": "~15.2.4",
-        "@angular/core": "~15.2.4",
-        "@angular/forms": "~15.2.4",
-        "@angular/platform-browser": "~15.2.4",
-        "@angular/platform-browser-dynamic": "~15.2.4",
-        "@angular/router": "~15.2.4",
-        "@fortawesome/fontawesome-free": "^6.6.0",
-        "bootstrap": "^5.3.3",
-        "chart.js": "^4.4.4",
-        "dotenv": "^16.4.5",
-        "express": "^4.19.2",
-        "mongodb": "^6.8.0",
-        "mongoose": "^8.5.3",
-        "ngx-swiper-wrapper": "^10.0.0",
-        "rxjs": "~7.8.0",
-        "zone.js": "~0.13.0"
-    },
-    "devDependencies": {
-        "@angular-devkit/build-angular": "~15.2.4",
-        "@angular/cli": "~15.2.4",
-        "@angular/compiler-cli": "~15.2.4",
-        "@types/jasmine": "~4.3.0",
-        "@types/node": "^20.2.5",
-        "typescript": "~4.9.5"
-    }
+  "name": "trading-app",
+  "version": "0.0.1",
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e"
+  },
+  "dependencies": {
+    "@angular/animations": "~16.2.12",
+    "@angular/common": "~16.2.12",
+    "@angular/compiler": "~16.2.12",
+    "@angular/core": "~16.2.12",
+    "@angular/forms": "~16.2.12",
+    "@angular/platform-browser": "~16.2.12",
+    "@angular/platform-browser-dynamic": "~16.2.12",
+    "@angular/router": "~16.2.12",
+    "@coreui/icons": "^3.0.1",
+    "@fortawesome/fontawesome-free": "^6.6.0",
+    "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.4",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "mongodb": "^6.8.0",
+    "mongoose": "^8.5.3",
+    "rxjs": "~7.8.0",
+    "zone.js": "~0.13.0"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "~16.2.14",
+    "@angular/cli": "~16.2.14",
+    "@angular/compiler-cli": "~16.2.12",
+    "@types/jasmine": "~4.3.0",
+    "@types/node": "^20.2.5",
+    "typescript": "~4.9.5"
+  }
 }
