--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "server": "json-server --watch ./src/assets/data/db.json --port 3000"
   },
   "dependencies": {
     "@angular/animations": "~16.2.12",
@@ -24,6 +25,7 @@
     "chart.js": "^4.4.4",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "json-server": "^1.0.0-beta.2",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.3",
     "rxjs": "~7.8.0",
